@@ -5,8 +5,8 @@ using System.Runtime.InteropServices;
 // General Information about an assembly is controlled through the following 
 // set of attributes. Change these attribute values to modify the information
 // associated with an assembly.
-[assembly: AssemblyTitle("check_disk_free")]
-[assembly: AssemblyDescription("Disk space utilization (free) check plugin for NRPE")]
+[assembly: AssemblyTitle("check_disk_use")]
+[assembly: AssemblyDescription("Disk space utilization (use) check plugin for NRPE")]
 
 // The following GUID is for the ID of the typelib if this project is exposed to COM
-[assembly: Guid("6500e8c7-eb3d-4f8f-b19a-c23b6ec24099")]
+[assembly: Guid("305c2bbb-297b-4f64-9738-e43684db4037")]
