@@ -8,6 +8,7 @@ del %TEST_OUTPUT%
 %DIST_DIR%\check_cpu.exe 1>>%TEST_OUTPUT% 2>&1
 %DIST_DIR%\check_disk_free.exe 1>>%TEST_OUTPUT% 2>&1
 %DIST_DIR%\check_disk_time.exe 1>>%TEST_OUTPUT% 2>&1
+%DIST_DIR%\check_disk_use.exe 1>>%TEST_OUTPUT% 2>&1
 %DIST_DIR%\check_http.exe 1>>%TEST_OUTPUT% 2>&1
 %DIST_DIR%\check_mem.exe 1>>%TEST_OUTPUT% 2>&1
 %DIST_DIR%\check_ping.exe 1>>%TEST_OUTPUT% 2>&1
